# 生成目标名字
SET(LIBRARY_HIREDIS_BUILD_TARGET_NAME "hiredis")

# 头文件目录、宏定义、编译选项
IF(MSVC)
    # 头文件目录
    SET(LIBRARY_HIREDIS_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/hiredis
        ${PROJECT_SOURCE_DIR}/3rd/hiredis/include
        ${PROJECT_SOURCE_DIR}/3rd/hiredis/src
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/openssl_x64-windows-static/include
    )

    # 宏定义
    SET(LIBRARY_HIREDIS_COMPILE_DEFINITIONS
        -DWIN32_LEAN_AND_MEAN
        -DLIBRARY_HIREDIS_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_HIREDIS_COMPILE_OPTIONS
        /wd4100
        /wd4102
        /wd4146
        /wd4189
        /wd4200
        /wd4244
        /wd4267
        /wd4312
        /wd4456
        /wd4702
        /wd4996
    )
ELSE()
    # 头文件目录
    SET(LIBRARY_HIREDIS_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/hiredis
        ${PROJECT_SOURCE_DIR}/3rd/hiredis/include
        ${PROJECT_SOURCE_DIR}/3rd/hiredis/src
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/openssl_x64-linux/include
    )

    # 宏定义
    SET(LIBRARY_HIREDIS_COMPILE_DEFINITIONS
        -DLIBRARY_HIREDIS_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_HIREDIS_COMPILE_OPTIONS
        -Wno-unused-function
        -Wno-unused-variable
    )
ENDIF()

MESSAGE(STATUS "---------------------------------------------------------------------")

# 递归添加[./]目录下所有源文件(不包括头文件)
#AUX_SOURCE_DIRECTORY(./ LIBRARY_HIREDIS_DIR_SRC_LIST)
FILE(GLOB_RECURSE LIBRARY_HIREDIS_DIR_SRC_LIST ./*.c ./*.cc ./*.cpp)

# 生成静态库
ADD_LIBRARY(${LIBRARY_HIREDIS_BUILD_TARGET_NAME}                STATIC  ${LIBRARY_HIREDIS_DIR_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_HIREDIS_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_HIREDIS_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_HIREDIS_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_HIREDIS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${LIBRARY_HIREDIS_BUILD_TARGET_NAME}     PRIVATE ${LIBRARY_HIREDIS_COMPILE_OPTIONS})

MESSAGE(STATUS "LIBRARY_HIREDIS_DIR_SRC_LIST        = ${LIBRARY_HIREDIS_DIR_SRC_LIST}")
MESSAGE(STATUS "LIBRARY_HIREDIS_INCLUDE_DIR         = ${LIBRARY_HIREDIS_INCLUDE_DIR}")
MESSAGE(STATUS "LIBRARY_HIREDIS_COMPILE_DEFINITIONS = ${LIBRARY_HIREDIS_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "LIBRARY_HIREDIS_COMPILE_OPTIONS     = ${LIBRARY_HIREDIS_COMPILE_OPTIONS}")