# 生成目标名字
SET(LIBRARY_JSON_CPP_BUILD_TARGET_NAME "jsoncpp")

# 头文件目录、宏定义、编译选项
IF(MSVC)
    # 头文件目录
    SET(LIBRARY_JSON_CPP_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/jsoncpp
        ${PROJECT_SOURCE_DIR}/3rd/jsoncpp/include
    )

    # 宏定义
    SET(LIBRARY_JSON_CPP_COMPILE_DEFINITIONS
        -DLIBRARY_JSON_CPP_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_JSON_CPP_COMPILE_OPTIONS
        # ...
    )
ELSE()
    # 头文件目录
    SET(LIBRARY_JSON_CPP_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/jsoncpp
        ${PROJECT_SOURCE_DIR}/3rd/jsoncpp/include
    )

    # 宏定义
    SET(LIBRARY_JSON_CPP_COMPILE_DEFINITIONS
        -DLIBRARY_JSON_CPP_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_JSON_CPP_COMPILE_OPTIONS
        # ...
    )
ENDIF()

MESSAGE(STATUS "---------------------------------------------------------------------")

# 递归添加[./]目录下所有源文件(不包括头文件)
#AUX_SOURCE_DIRECTORY(./ LIBRARY_JSON_CPP_DIR_SRC_LIST)
FILE(GLOB_RECURSE LIBRARY_JSON_CPP_DIR_SRC_LIST ./*.c ./*.cc ./*.cpp)

# 生成静态库
ADD_LIBRARY(${LIBRARY_JSON_CPP_BUILD_TARGET_NAME}                STATIC  ${LIBRARY_JSON_CPP_DIR_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_JSON_CPP_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_JSON_CPP_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_JSON_CPP_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_JSON_CPP_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${LIBRARY_JSON_CPP_BUILD_TARGET_NAME}     PRIVATE ${LIBRARY_JSON_CPP_COMPILE_OPTIONS})

MESSAGE(STATUS "LIBRARY_JSON_CPP_DIR_SRC_LIST        = ${LIBRARY_JSON_CPP_DIR_SRC_LIST}")
MESSAGE(STATUS "LIBRARY_JSON_CPP_INCLUDE_DIR         = ${LIBRARY_JSON_CPP_INCLUDE_DIR}")
MESSAGE(STATUS "LIBRARY_JSON_CPP_COMPILE_DEFINITIONS = ${LIBRARY_JSON_CPP_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "LIBRARY_JSON_CPP_COMPILE_OPTIONS     = ${LIBRARY_JSON_CPP_COMPILE_OPTIONS}")