# 生成目标名字
SET(LIBRARY_UTIL_BUILD_TARGET_NAME "util")

# 头文件目录、宏定义、编译选项
IF(MSVC)
    # 头文件目录
    SET(LIBRARY_UTIL_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/util
        ${PROJECT_SOURCE_DIR}/3rd/util/include
    )

    # 宏定义
    SET(LIBRARY_UTIL_COMPILE_DEFINITIONS
        -DLIBRARY_UTIL_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_UTIL_COMPILE_OPTIONS
        /wd4819
    )
ELSE()
    # 头文件目录
    SET(LIBRARY_UTIL_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/3rd/util
        ${PROJECT_SOURCE_DIR}/3rd/util/include
    )

    # 宏定义
    SET(LIBRARY_UTIL_COMPILE_DEFINITIONS
        -DLIBRARY_UTIL_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(LIBRARY_UTIL_COMPILE_OPTIONS
        # ...
    )
ENDIF()

MESSAGE(STATUS "---------------------------------------------------------------------")

# 递归添加[./]目录下所有源文件(不包括头文件)
#AUX_SOURCE_DIRECTORY(./ LIBRARY_UTIL_DIR_SRC_LIST)
FILE(GLOB_RECURSE LIBRARY_UTIL_DIR_SRC_LIST ./*.c ./*.cc ./*.cpp)

# 生成静态库
ADD_LIBRARY(${LIBRARY_UTIL_BUILD_TARGET_NAME}                STATIC  ${LIBRARY_UTIL_DIR_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_UTIL_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_UTIL_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_UTIL_BUILD_TARGET_NAME} PRIVATE ${LIBRARY_UTIL_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${LIBRARY_UTIL_BUILD_TARGET_NAME}     PRIVATE ${LIBRARY_UTIL_COMPILE_OPTIONS})

MESSAGE(STATUS "LIBRARY_UTIL_DIR_SRC_LIST        = ${LIBRARY_UTIL_DIR_SRC_LIST}")
MESSAGE(STATUS "LIBRARY_UTIL_INCLUDE_DIR         = ${LIBRARY_UTIL_INCLUDE_DIR}")
MESSAGE(STATUS "LIBRARY_UTIL_COMPILE_DEFINITIONS = ${LIBRARY_UTIL_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "LIBRARY_UTIL_COMPILE_OPTIONS     = ${LIBRARY_UTIL_COMPILE_OPTIONS}")